[gd_scene load_steps=6 format=3 uid="uid://6fauqiuifkj6"]

[ext_resource type="Script" uid="uid://nmwvwsqw6sh2" path="res://scripts/ui.gd" id="1_nt7q6"]
[ext_resource type="Texture2D" uid="uid://dgwi4lg7p1ld" path="res://assets/sprites/settings.png" id="2_x4jx1"]
[ext_resource type="Texture2D" uid="uid://gckwa7ogs15o" path="res://assets/sprites/rifle.png" id="3_yev5y"]
[ext_resource type="Texture2D" uid="uid://dpt7y80q7kqho" path="res://assets/sprites/target.png" id="4_gdt2y"]

[sub_resource type="SystemFont" id="SystemFont_x4jx1"]
font_names = PackedStringArray("Sans-Serif")
font_weight = 725
subpixel_positioning = 0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="Debug" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 111.0
offset_top = 27.0
offset_right = 539.0
offset_bottom = 171.0
bbcode_enabled = true
text = "[b]Input : [/b]
[b]Output V : [/b]
[b]Output W : [/b]
[b]Delay : [/b]
[b]Woufeuse : [/b]
[b]Vraisorcier : [/b]"

[node name="SettingsPanel" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="SettingsPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 200.0
offset_right = 530.0
offset_bottom = 900.0
color = Color(0.235294, 0.235294, 0.235294, 0.760784)

[node name="AUDIO" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 211.0
offset_top = 370.0
offset_right = 327.0
offset_bottom = 411.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 36
text = "AUDIO"

[node name="Musique" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 427.0
offset_right = 147.0
offset_bottom = 462.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 24
text = "Musique"

[node name="MusiqueSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 0
offset_left = 159.135
offset_top = 432.0
offset_right = 459.135
offset_bottom = 448.0
min_value = -50.0
max_value = 0.0
step = 0.0
value = -28.0

[node name="MusiqueValue" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 469.0
offset_top = 430.0
offset_right = 509.0
offset_bottom = 453.0
text = "0"

[node name="Voix" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 464.0
offset_right = 141.0
offset_bottom = 499.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 24
text = "Voix"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 0
offset_left = 159.135
offset_top = 469.0
offset_right = 459.135
offset_bottom = 485.0
min_value = -30.0
max_value = 30.0
step = 0.0
value = 1.0

[node name="VolumeValue" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 469.0
offset_top = 467.0
offset_right = 509.0
offset_bottom = 490.0
text = "0"

[node name="Microphone" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 504.0
offset_right = 186.0
offset_bottom = 539.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 24
text = "Microphone"

[node name="MicrophoneList" type="OptionButton" parent="SettingsPanel"]
clip_contents = true
layout_mode = 0
offset_left = 203.0
offset_top = 506.0
offset_right = 513.0
offset_bottom = 531.0
fit_to_longest_item = false

[node name="Threshold" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 82.0
offset_top = 546.0
offset_right = 147.0
offset_bottom = 581.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 24
text = "Seuil"

[node name="ThresholdSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 0
offset_left = 159.135
offset_top = 552.0
offset_right = 459.135
offset_bottom = 568.0
min_value = -80.0
max_value = 20.0
step = 5.0
value = -50.0
tick_count = 18
ticks_on_borders = true

[node name="ThresholdValue" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 469.0
offset_top = 550.0
offset_right = 509.0
offset_bottom = 573.0
text = "-50"

[node name="Speaker" type="Label" parent="SettingsPanel"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 456.0
offset_right = 186.0
offset_bottom = 491.0
theme_override_fonts/font = SubResource("SystemFont_x4jx1")
theme_override_font_sizes/font_size = 24
text = "Sortie"
horizontal_alignment = 2

[node name="SpeakerList" type="OptionButton" parent="SettingsPanel"]
visible = false
layout_mode = 0
offset_left = 203.0
offset_top = 458.0
offset_right = 513.0
offset_bottom = 483.0
fit_to_longest_item = false

[node name="MainMenu" type="Button" parent="SettingsPanel"]
layout_mode = 0
offset_left = 422.0
offset_top = 215.0
offset_right = 511.0
offset_bottom = 246.0
text = "Ã‰cran titre"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 13.0
offset_right = 102.0
offset_bottom = 101.0
icon = ExtResource("2_x4jx1")
flat = true

[node name="Rifle" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 892.0
offset_right = 543.0
offset_bottom = 980.0
icon = ExtResource("3_yev5y")
flat = true

[node name="Target" type="Sprite2D" parent="."]
visible = false
position = Vector2(281, 600)
scale = Vector2(0.13, 0.13)
texture = ExtResource("4_gdt2y")

[connection signal="value_changed" from="SettingsPanel/MusiqueSlider" to="." method="_on_musique_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="SettingsPanel/MicrophoneList" to="." method="_on_microphone_list_item_selected"]
[connection signal="value_changed" from="SettingsPanel/ThresholdSlider" to="." method="_on_threshold_value_changed"]
[connection signal="item_selected" from="SettingsPanel/SpeakerList" to="." method="_on_speaker_list_item_selected"]
[connection signal="pressed" from="SettingsPanel/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Rifle" to="." method="_on_rifle_pressed"]
